feat(User-request): User requests by user
Add method for get user  requests by user id
